ROX-16830: Fix policy criteria buttons being cut off (#8922)

--- a/ui/apps/platform/src/Containers/Policies/Wizard/Step3/PolicyCriteriaForm.css
+++ b/ui/apps/platform/src/Containers/Policies/Wizard/Step3/PolicyCriteriaForm.css
@@ -3,6 +3,10 @@
     overflow-x: scroll;
 }
 
+#policy-sections .pf-c-toggle-group .pf-c-toggle-group__button {
+    white-space: initial;
+}
+
 #policy-sections-container {
     overflow: auto;
 }
